<resources>
    <string name="app_name">Watchr</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="error">Error!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="haveAccount">Already have an account?  Log in</string>
    <string name="name_required">Name required</string>
    <string name="passwordsMustMatch">Passwords must match</string>
    <string name="conf_pass_required">Confirm password required</string>
    <string name="invalid_pass">Invalid password</string>
    <string name="invalid_email">Invalid email</string>
    <string name="email_required">Email required</string>
    <string name="pass_required">Password required</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="get_new_password">Get New Password</string>
    <string name="if_in_system">If the email provided is in our system, you should receive a verification code shortly. Please enter the verification code below.</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="confirm_verification_code">Confirm Verification Code</string>
    <string name="invalid_code">Invalid code</string>
    <string name="code_required">Code required</string>
    <string name="verification">Verification</string>
    <string name="what_s_new">What\'s new</string>-
    <string name="your_watchlist">Your Watchlist</string>
    <string name="search_for_show_or_movie">Search for show or movie</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="add_profile">Add Profile</string>
    <string name="coming_soon_movies">Coming Soon-Movies</string>
    <string name="coming_soon_series">Coming Soon Series</string>
    <string name="new_movies">New Movies</string>
    <string name="search_for_movie">Search for Movie</string>
    <string name="search_for_show">Search for Show</string>
    <string name="movies_coming_soon">Movies Coming Soon</string>
    <string name="where_to_watch">Where to Watch</string>
    <string name="nowhere_to_stream_at_the_moment">Nowhere to stream at the moment</string>
    <string name="not_streaming">Not streaming</string>
    <string name="synopsis">Synopsis</string>
    <string name="genres">Genres</string>
    <string name="add_to_watchlist_or_ignore_title">Add to Watchlist OR Ignore Title</string>
    <string name="watchlist">Watchlist</string>
    <string name="currently_not_in_your_watchlist_click_to_add_it">Not in your watchlist.  Add it?</string>
    <string name="this_title_is_on_your_watchlist_click_sign_to_remove_it">Title in your watchlist. Click - sign to remove.</string>
    <string name="it_will_only_show_up_if_searched">It will only show up if searched.</string>
    <string name="ignore_this_title">Ignore this title?</string>
    <string name="remove_from_ignore">Remove from hidden titles?</string>
    <string name="return_to_list">Return to List</string>
    <string name="search_movie">Search Movie</string>
    <string name="no_results">No Results</string>
    <string name="return_to_search">Return to Search</string>
    <string name="search_for_series">Search for Series</string>
    <string name="new_on_tv">New TV Episodes</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>