<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <TextView
        android:id="@+id/tvTopHeaderHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/app_name"
        android:textSize="34sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnNewEpisodes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_on_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTopHeaderHome" />

    <Button
        android:id="@+id/btnNewMovies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_movies"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNewEpisodes" />

    <Button
        android:id="@+id/btnYourWatchlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_watchlist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNewMovies" />

    <Button
        android:id="@+id/btnSearchMovie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_for_movie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnYourWatchlist" />

    <Button
        android:id="@+id/btnSearchSeries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_for_series"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSearchMovie" />

    <Button
        android:id="@+id/btnComingSoonMovies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/coming_soon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSearchSeries" />


</androidx.constraintlayout.widget.ConstraintLayout>