<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword">

    <TextView
        android:id="@+id/topHeaderFP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/poppinsbold"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/email"
        app:flow_horizontalBias="0.0"
        app:hintTextColor="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topHeaderFP">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tiEmailFP"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:drawableEnd="@drawable/ic_baseline_alternate_email_24"
        android:fontFamily="@font/poppinsbold"
        android:textColorHint="#757575"
        app:hintTextColor="#757575" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnRequestNewPassword"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/get_new_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"></Button>

    <TextView
        android:id="@+id/tvEmailErrorFP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="5dp"
        android:text="@string/error"
        android:drawableStart="@drawable/ic_warning_red"
        android:textColor="@color/red"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        tools:ignore="UseCompatTextViewDrawableXml" />
</androidx.constraintlayout.widget.ConstraintLayout>